--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -10,6 +10,7 @@
   </section>
   <app-nosotros></app-nosotros>
   <app-nuestra-manera></app-nuestra-manera>
+ <app-contact></app-contact>
 </div>
 
 }
