--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,56 +1,72 @@
 <!-- Botón de contacto -->
-<div class="container2">
-  <h2 class="text-center">Si te interesa la propuesta o tenes alguna consulta </h2>
-  <p class="text-center parrafo2">O si te interesa formar parte de nuestro equipo, envíanos un mensaje con tus datos y nos pondremos en contacto.</p>
-  <div class="modal-header">
+<div class="back">
+<div class="container">
+  <div class="contact-form-wrapper">
+    <div class="contact-image">
+      <img src="../../../assets/leonardo-b-card.jpg" alt="Imagen de contacto">
+    </div>
+    <div class="contact-form-container">
+      <div class="contact-form">
+        <form (ngSubmit)="enviarConsulta(contactForm)" #contactForm="ngForm" novalidate>
+          <div class="form-group mb-3">
+            <label for="nombre">
+              <i class="fas fa-user"></i> Nombre
+            </label>
+            <input type="text" id="nombre" name="nombre" class="form-control"
+                   [(ngModel)]="consulta.nombre" #nombre="ngModel" placeholder="Juan" required>
+            <div *ngIf="nombre.invalid && nombre.touched" class="text-danger">
+              El nombre es obligatorio.
+            </div>
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="email">
+              <i class="fas fa-envelope"></i> Correo Electrónico
+            </label>
+            <input type="email" id="email" name="email" placeholder="juan@gmail.com" class="form-control"
+                   [(ngModel)]="consulta.email" #email="ngModel" required email>
+            <div *ngIf="email.invalid && email.touched" class="text-danger">
+              Ingresa un correo electrónico válido.
+            </div>
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="telefono">
+              <i class="fas fa-phone"></i> Teléfono (Opcional)
+            </label>
+            <input type="tel" id="telefono" name="telefono" placeholder="1122334455" class="form-control"
+                   [(ngModel)]="consulta.telefono" #telefono="ngModel">
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="asunto">
+              <i class="fas fa-tag"></i> Asunto
+            </label>
+            <input type="text" id="asunto" name="asunto" placeholder="Consulta de presupuesto" class="form-control"
+                   [(ngModel)]="consulta.asunto" #asunto="ngModel" required>
+            <div *ngIf="asunto.invalid && asunto.touched" class="text-danger">
+              El asunto es obligatorio.
+            </div>
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="mensaje">
+              <i class="fas fa-comment-dots"></i> Mensaje
+            </label>
+            <textarea id="mensaje" rows="5" name="mensaje" class="form-control"
+                      [(ngModel)]="consulta.mensaje" placeholder="Buenas tardes..." #mensaje="ngModel" required></textarea>
+            <div *ngIf="mensaje.invalid && mensaje.touched" class="text-danger">
+              El mensaje es obligatorio.
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary" [disabled]="contactForm.invalid">Enviar Consulta</button>
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="modal-body">
-    <form (ngSubmit)="enviarConsulta(contactForm)" #contactForm="ngForm" novalidate>
-      <div class="form-group mb-3">
-        <label for="nombre">Nombre</label>
-        <input type="text" id="nombre" name="nombre" class="form-control"
-               [(ngModel)]="consulta.nombre" #nombre="ngModel" required>
-        <div *ngIf="nombre.invalid && nombre.touched" class="text-danger">
-          El nombre es obligatorio.
-        </div>
-      </div>
-
-      <div class="form-group mb-3">
-        <label for="email">Correo Electrónico</label>
-        <input type="email" id="email" name="email" class="form-control"
-               [(ngModel)]="consulta.email" #email="ngModel" required email>
-        <div *ngIf="email.invalid && email.touched" class="text-danger">
-          Ingresa un correo electrónico válido.
-        </div>
-      </div>
-
-      <div class="form-group mb-3">
-        <label for="telefono">Teléfono (Opcional)</label>
-        <input type="tel" id="telefono" name="telefono" class="form-control"
-               [(ngModel)]="consulta.telefono" #telefono="ngModel">
-      </div>
-
-      <div class="form-group mb-3">
-        <label for="asunto">Asunto</label>
-        <input type="text" id="asunto" name="asunto" class="form-control"
-               [(ngModel)]="consulta.asunto" #asunto="ngModel" required>
-        <div *ngIf="asunto.invalid && asunto.touched" class="text-danger">
-          El asunto es obligatorio.
-        </div>
-      </div>
-
-      <div class="form-group mb-3">
-        <label for="mensaje">Mensaje</label>
-        <textarea id="mensaje" rows="5" name="mensaje" class="form-control"
-                  [(ngModel)]="consulta.mensaje" #mensaje="ngModel" required></textarea>
-        <div *ngIf="mensaje.invalid && mensaje.touched" class="text-danger">
-          El mensaje es obligatorio.
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary" [disabled]="contactForm.invalid">Enviar Consulta</button>
-    </form>
-  </div>
-
 </div>
+</div>
+
+
 
 
