--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,30 +1,62 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <img src="../../../assets/salem_final.png" (click)="scrollToSection('home')"(click)="handleNavClick('home')" class="img">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="">
+      <img
+        src="../../../assets/salem_final.png"
+        (click)="scrollToSection('home')"
+        class="img"
+      />
+    </div>
+
+    <button
+      class="navbar-toggler order-1"
+      type="button"
+      (click)="toggleNavbar(navbarNavDropdown)" 
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <button class="nav-link"(click)="openContactModal()" >Contáctanos</button>
-        </li>
-        <li class="nav-item">
-          <button class="nav-link"(click)="scrollToSection('seccion2')" (click)="navigateToSeccion2()">Trabaja con nosotros</button>
-        </li>
-        <li class="nav-item">
-          <button class="nav-link" (click)="scrollToSection('home')"(click)="handleNavClick('home')">Home</button>
 
+    <div
+      class="collapse navbar-collapse order-2"
+      id="navbarNavDropdown"
+      #navbarNavDropdown
+    >
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <button
+            class="nav-link"
+            (click)="openContactModal()"
+          >
+            Contáctanos
+          </button>
+        </li>
+        <li class="nav-item">
+          <button
+            class="nav-link"
+            (click)="scrollToSection('seccion2')"
+            (click)="navigateToSeccion2()"
+          >
+            Sobre Nosotros
+          </button>
+        </li>
+        <li class="nav-item">
+          <button
+            class="nav-link"
+            (click)="scrollToSection('home')"
+          >
+            Home
+          </button>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-
 <ng-template #contactModal let-modal>
-  <div class="modal-dialog custom-modal-dialog">
-    <div class="modal-content custom-modal-content">
+  <div class="modal-content ">
       <div class="modal-header">
         <h5 class="modal-title" id="contactModalLabel">Formulario de Contacto</h5>
         <button type="button" class="btn-close" (click)="modal.dismiss('Cross click')"></button>
@@ -32,38 +64,52 @@
       <div class="modal-body">
         <form (ngSubmit)="enviarConsulta(contactForm)" #contactForm="ngForm" novalidate>
           <div class="form-group mb-3">
-            <label for="nombre">Nombre</label>
+            <label for="nombre">
+              <i class="fas fa-user"></i> Nombre
+            </label>
             <input type="text" id="nombre" name="nombre" class="form-control"
-                   [(ngModel)]="consulta.nombre" #nombre="ngModel" required>
+                   [(ngModel)]="consulta.nombre" #nombre="ngModel" placeholder="Juan" required>
             <div *ngIf="nombre.invalid && nombre.touched" class="text-danger">
               El nombre es obligatorio.
             </div>
           </div>
+
           <div class="form-group mb-3">
-            <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" class="form-control"
+            <label for="email">
+              <i class="fas fa-envelope"></i> Correo Electrónico
+            </label>
+            <input type="email" id="email" name="email" placeholder="juan@gmail.com" class="form-control"
                    [(ngModel)]="consulta.email" #email="ngModel" required email>
             <div *ngIf="email.invalid && email.touched" class="text-danger">
               Ingresa un correo electrónico válido.
             </div>
           </div>
+
           <div class="form-group mb-3">
-            <label for="telefono">Teléfono (Opcional)</label>
-            <input type="tel" id="telefono" name="telefono" class="form-control"
+            <label for="telefono">
+              <i class="fas fa-phone"></i> Teléfono (Opcional)
+            </label>
+            <input type="tel" id="telefono" name="telefono" placeholder="1122334455" class="form-control"
                    [(ngModel)]="consulta.telefono" #telefono="ngModel">
           </div>
+
           <div class="form-group mb-3">
-            <label for="asunto">Asunto</label>
-            <input type="text" id="asunto" name="asunto" class="form-control"
+            <label for="asunto">
+              <i class="fas fa-tag"></i> Asunto
+            </label>
+            <input type="text" id="asunto" name="asunto" placeholder="Consulta de presupuesto" class="form-control"
                    [(ngModel)]="consulta.asunto" #asunto="ngModel" required>
             <div *ngIf="asunto.invalid && asunto.touched" class="text-danger">
               El asunto es obligatorio.
             </div>
           </div>
+
           <div class="form-group mb-3">
-            <label for="mensaje">Mensaje</label>
+            <label for="mensaje">
+              <i class="fas fa-comment-dots"></i> Mensaje
+            </label>
             <textarea id="mensaje" rows="5" name="mensaje" class="form-control"
-                      [(ngModel)]="consulta.mensaje" #mensaje="ngModel" required></textarea>
+                      [(ngModel)]="consulta.mensaje" placeholder="Buenas tardes..." #mensaje="ngModel" required></textarea>
             <div *ngIf="mensaje.invalid && mensaje.touched" class="text-danger">
               El mensaje es obligatorio.
             </div>
@@ -72,5 +118,4 @@
         </form>
       </div>
     </div>
-  </div>
 </ng-template>
