--- a/src/app/components/seccion2/seccion2.component.html
+++ b/src/app/components/seccion2/seccion2.component.html
@@ -28,14 +28,12 @@
 
   <!-- Sección de las tarjetas del equipo -->
   <div class="row container-card">
-    <div class="col-md-2" *ngFor="let miembro of miembros">
+    <div class=" col-6 col-md-6 col-lg-3" *ngFor="let miembro of miembros">
       <div class="card">
         <div class="card-inner">
           <div class="card-front">
             <h5 class="card-title">{{ miembro.nombre }}</h5>
             <img src="{{ miembro.imagen }}" class="card-img-top" alt="{{ miembro.nombre }}">
-          </div>
-          <div class="card-back">
             <p class="card-text cargo">{{ miembro.cargo }}</p>
             <p class="card-text descripcion">{{ miembro.descripcion }}</p>
           </div>
