--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,11 @@ html, body {
     padding-right: 0 !important;
     
   }
-
+  @media (min-width: 992px) {
+    .modal-lg, .modal-xl {
+        --bs-modal-width: 500px;
+    }
+}
   @keyframes fadeIn {
     from {
       opacity: 0;
