--- a/src/app/components/nabvar/nosotros/nosotros.component.scss
+++ b/src/app/components/nabvar/nosotros/nosotros.component.scss
@@ -116,7 +116,9 @@
         .section-text {
           font-size: 1.2rem;
           line-height: 1;
-          margin-right: 20px;
+          margin-right: 50px;
+          padding-left: 0;
+          text-align: center;
         }
 
   }
