--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,6 +1,7 @@
 
 .back{
-  background-color: rgba(255, 255, 255, 0.1);  
+  padding-top: 10px;
+  background-color: rgba(0, 0, 0, 0.5);  
 }
 .container {
   width: 100%;
