--- a/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
@@ -27,7 +27,7 @@
 .image-text-wrapper {
   padding-top: 10px;
   padding-bottom: 20px;
-  background-color: rgba(255, 255, 255, 0.1); 
+  background-color: rgba(0, 0, 0, 0.5); 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,8 +42,6 @@
 }
 
 .enlargable-image {
-  
-  box-shadow: 0 4px 6px rgba(124, 124, 124, 0.4), 0 2px 6px rgba(233, 233, 233, 0.4) !important;
   border: 2px solid rgba(232, 232, 232, 0.6);
   border-radius: 5px;
   max-width: 600px;
@@ -58,6 +56,7 @@
   z-index: 10;
 }
 .text-content {
+  color: #d2d2d2;
   max-width: 500px;
   /* Ajusta el ancho máximo del texto */
   text-align: justify; /* Justifica el texto para un borde derecho uniforme */
@@ -75,7 +74,7 @@
   /* Espaciado entre ítems */
 }
 strong{
-  color: #000000;
+  color: #ffffff;
 }
 h2{
   color: #ffffff	; 
@@ -114,7 +113,9 @@ h2{
     padding: 10px;
     /* Opcional: Ajustar espaciado para móviles */
   }
-
+strong{
+  color: #ffffff;
+}
   .enlargable-image.expanded {
     transform: scale(1.2);
   }
@@ -139,6 +140,7 @@ h2{
     /* Centra el texto */
     padding: 0.5rem;
     /* Reduce el relleno */
+    color:#d2d2d2;
   }
   h2{
     margin-right: 10px;
