--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -1,9 +1,20 @@
 /* Estilos generales para la sección */
 #equipo {
-  background: linear-gradient(to right, blue, rgb(59, 87, 226), rgb(212, 246, 255)); /* Gradiente de azul a celeste */
+  background: linear-gradient(to right,rgb(41, 74, 239), rgb(59, 87, 226) , rgb(185, 240, 255)); /* Gradiente de azul a celeste */
   overflow: hidden;
   z-index: 0; /* Fondo detrás del contenido */
   position: relative;
+}
+.black-stripe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at 5% 5%, rgba(0, 0, 0, 1 ) 15%, rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0) 70%);
+  mix-blend-mode: multiply; /* Mezclar el fondo para que se integre mejor *
+  pointer-events: none; /* No interferir con los elementos interactivos */
+  z-index: -1; /* Colocar la franja negra detrás del contenido */
 }
  
 
@@ -11,7 +22,6 @@
   h2 {
       text-align: center;
       color: #ffffff; 
-      text-shadow: #000000 0 4px 4px;
       font-size: 2.5rem;
       font-weight: bold;
       letter-spacing: 1px;
@@ -22,7 +32,7 @@
   }
 
   .container{
-    background-color: rgba(255, 255, 255, 0.2);  
+    background-color: rgba(0, 0, 0, 0.3);
     margin-top: 80px;
     padding-top: 10px;
     width: 100%;
@@ -40,7 +50,7 @@
   .team-details {
     list-style-type: none;
     padding-right: 10px;
-    color: #000000 ;
+    color: #d2d2d2 ;
     text-align: justify ; 
     
     li {
@@ -51,7 +61,7 @@
 
       strong {
 
-        color: #2c2a8d;
+        color: #ffffff;
         min-width: 200px; // Ajusta el ancho mínimo del título para alinear los textos
         display: inline-block; // Asegura que todos los títulos ocupen el mismo ancho
         text-align: right; // Alinea el texto a la izquierda
@@ -88,7 +98,7 @@
     height: auto; /* Altura automática para adaptarse al contenido */
     margin: 1rem;
     perspective: 1000px;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px; /* Mejora las esquinas redondeadas */
   }
   
@@ -107,7 +117,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; /* Asegura que los elementos comiencen desde la parte superior */
-    background-color: rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(0, 0, 0, 0.2);;
     border-radius: 5px;
     overflow: hidden;
@@ -116,7 +125,7 @@
   
   .card-front h5 {
     margin-bottom: 1rem; /* Espacio debajo del nombre */
-    color:#000000;
+    color:#ffffff;
     text-align: center; /* Centra el nombre */
   }
   
@@ -132,7 +141,7 @@
   .cargo {
     font-size: 1.3rem !important;
     margin-bottom: 0.5rem; /* Espacio entre el cargo y la descripción */
-    color: #2c2a8d;
+    color: #d2d2d2;
     text-align: center; /* Centra el cargo */
   }
   
@@ -140,12 +149,10 @@
     font-size: 1rem;
     text-align: center; /* Centra la descripción */
     margin-bottom: 0; /* Evita márgenes adicionales */
+    color: #d2d2d2;
   }
   
-  h2, p {
-    color: white; /* Asegura que el texto dentro del h2 y p sea blanco */
-    text-align: center;
-  }
+  
   
   h2 {
     font-size: 2.5rem; /* Ajusta el tamaño del título */
@@ -164,10 +171,12 @@
   @media (max-width: 768px) {
     
       .intro-text {
-        font-size: 15px;
+        font-size: 20px;
         line-height: 1.5em;
         margin-bottom: 15px;
-        color: #000000;
+        color: #d2d2d2;
+        text-align: center ; 
+        
       }
       
       .team-details {
@@ -183,25 +192,25 @@
       .team-details li {
         margin-bottom: 15px;
         padding: 10px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        border-bottom: 1px solid rgb(0, 0, 0,0.8);
       }
       
       .team-details li strong {
         display: block;
         font-weight: bold;
         margin-bottom: 5px;
-        color: #252d85;
+        color: #ffffff;
       }
       
       .team-details li span {
         display: block;
-        color: #000000;
+        color: #d2d2d2;
       }
       
       #read-more-btn {
         display: inline-block;
         margin-bottom: 10px;
-        background-color: #0066cc;
+        background-color: #000000;
         color: #ffffff;
         border: none;
         padding: 10px 20px;
@@ -211,8 +220,8 @@
       }
       
       .show-content {
-        max-height: 650px; /* Ajusta este valor según el contenido */
+        max-height: 680px; /* Ajusta este valor según el contenido */
         opacity: 1;
       }
-      
+    
   }
