--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,9 @@ html, body {
     box-sizing: border-box;
     
   }
+  app-contact{
+    z-index: auto !important;
+  }
 
   body.modal-open {
     padding-right: 0 !important;
