--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -11,9 +11,10 @@
       </div>
     </div>
   </div>
-  
+
+
   <!-- Carrusel para pantallas pequeñas -->
-  <div id="cardsCarousel" class="carousel slide d-block d-md-none" data-bs-ride="carousel" data-bs-interval="3000">
+  <div id="cardsCarousel" class="carousel slide d-block d-md-none" >
     <div class="carousel-inner">
       <div class="carousel-item" *ngFor="let card of cards; let i = index" [class.active]="i === 0">
         <div class="card border-0 shadow-sm mx-auto">
@@ -24,6 +25,15 @@
         </div>
       </div>
     </div>
+    <div class="carousel-indicators">
+      <button *ngFor="let card of cards; let i = index" 
+      [class.active]="i === 0"
+      type="button"
+      data-bs-target="#cardsCarousel"
+      [attr.data-bs-slide-to]="i">
+</button>
+    </div>
+  
     
     <!-- Botones de control del carrusel -->
     <button class="carousel-control-prev" type="button" data-bs-target="#cardsCarousel" data-bs-slide="prev" aria-label="Previous">
