--- a/src/app/components/nabvar/nosotros/nosotros.component.scss
+++ b/src/app/components/nabvar/nosotros/nosotros.component.scss
@@ -88,6 +88,7 @@
       
       }
         .content-wrapper {
+          background-color: rgba(0, 0, 0, 0.8); 
           flex-direction: column;
           align-items:center;
         }
