--- a/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
@@ -121,7 +121,7 @@ strong{
   }
 
   .image-text-wrapper {
-
+    background-color: rgba(0, 0, 0, 0.8); 
     flex-direction: column;
     /* Cambia la dirección de los elementos para pantallas más pequeñas */
     align-items: center;
