--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -169,7 +169,9 @@
  }
 
   @media (max-width: 768px) {
-    
+    .container{
+      background-color: rgba(0, 0, 0, 0.8); 
+    }
       .intro-text {
         font-size: 20px;
         line-height: 1.5em;
@@ -222,6 +224,9 @@
       .show-content {
         max-height: 680px; /* Ajusta este valor según el contenido */
         opacity: 1;
+      }
+      .card{
+        background-color: rgba(0, 0, 0, 0.8); 
       }
     
   }
