--- a/src/app/components/nabvar/contact/contact.component.scss
+++ b/src/app/components/nabvar/contact/contact.component.scss
@@ -1,7 +1,7 @@
 
 .back{
   padding-top: 10px;
-  background-color: rgba(0, 0, 0, 0.5);  
+  background-color: rgba(0, 0, 0, 0.8);  
 }
 .container {
   width: 100%;
@@ -124,3 +124,9 @@ input[type="tel"] {
     box-shadow: none; /* Puedes eliminar o ajustar el shadow si es necesario en pantallas pequeñas */
   }
 }
+@media (min-width: 992px) {
+  .container, .container-lg, .container-md, .container-sm {
+      height: 500px;
+      max-width: 700px;
+  }
+ }
