correct styles banner contact

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,5 +1,5 @@
 <!-- Banner Section -->
-<section id="home" class="banner">
-
-  </section>
+<div id="home">
+  <img src="../../../assets/leonardo-banner.jpg" alt="Banner" />
+</div>
   
