--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,17 +1,17 @@
-
 #home {
-  flex: 1;
-  background: url('../../../assets/leonardo-banner.jpg') no-repeat center center;
-  background-size: cover; /* Asegura que la imagen cubra todo el área del banner */
-  display: flex;
-  flex-direction: column;
   position: relative;
-  width: 100%; /* Ancho completo de la ventana */
-  height: 500px; /* Ajusta la altura según sea necesario */
+  width: 100%;
+  height: 600px;
   overflow: hidden;
-  object-fit: cover;
-  z-index: -1;
-  }
+}
+
+#home img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ocupará todo el ancho sin deformarse */
+  object-position: center; /* Centra la imagen */
+}
+
 @media (max-width: 768px) {
   #home{
    
