--- a/src/app/components/nabvar/nosotros/nosotros.component.scss
+++ b/src/app/components/nabvar/nosotros/nosotros.component.scss
@@ -8,7 +8,7 @@
   /* Ajustes para la tarjeta descriptiva */
   .content-wrapper {
     background-color: rgba(0, 0, 0, 0.8); ;
-    justify-content: center;
+    justify-content: space-evenly;
     padding-top: 10px;
     display: flex;
     align-items: center;
