--- a/src/app/components/nabvar/contact/contact.component.scss
+++ b/src/app/components/nabvar/contact/contact.component.scss
@@ -4,6 +4,7 @@
   background-color: rgba(0, 0, 0, 0.8);  
 }
 .container {
+  display: flex;
   width: 100%;
   padding-bottom: 20px;
   justify-content: center;
@@ -14,12 +15,12 @@
 .contact-form-wrapper {
   display: flex;
   width: 100%;
-  max-width: 1200px; /* Ajusta según sea necesario */
+  max-width: 800px; /* Ajusta según sea necesario */
   height: 100%; /* Asegura que el contenedor ocupe toda la altura disponible */
 }
 
 .contact-image {
-  flex: 1;
+  flex: 0 0 40%;
   display: flex;
   align-items: center; /* Centra la imagen verticalmente dentro del contenedor */
 }
@@ -34,7 +35,7 @@
 
 .contact-form-container {
   background: linear-gradient(to right, rgb(152, 167, 241), rgb(212, 246, 255));
-  flex: 1;
+  flex: 0 0 60%;
   padding: 20px;
   background-color: #fff;
   border-radius: 0 5px 5px 0;
