--- a/src/app/components/nabvar/nosotros/nosotros.component.html
+++ b/src/app/components/nabvar/nosotros/nosotros.component.html
@@ -1,7 +1,7 @@
 <div class="divider"></div>
 
       <div id="manera" class="content-wrapper ">
-        <div id="imagescarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+        <div id="imagesCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div
               class="carousel-item"
@@ -11,6 +11,22 @@
               <img [src]="image" class="d-block w-100 custom-img" [alt]="'Imagen ' + (i + 1)" />
             </div>
           </div>
+          <div class="carousel-indicators">
+            <button *ngFor="let image of images; let i = index" 
+            [class.active]="i === 0"
+            type="button"
+            data-bs-target="#imagesCarousel"
+            [attr.data-bs-slide-to]="i">
+      </button>
+          </div>
+        
+          <!-- Botones de control del carrusel -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#imagesCarousel" data-bs-slide="prev" aria-label="Previous">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#imagesCarousel" data-bs-slide="next" aria-label="Next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </button>
         </div>
       <div class="text-content ms-5">
         <h2 class="section-title">Nosotros</h2>
