--- a/src/app/components/nabvar/nosotros/nosotros.component.scss
+++ b/src/app/components/nabvar/nosotros/nosotros.component.scss
@@ -18,15 +18,17 @@
   
   /* Imagen personalizada */
   .custom-img {
-    
     width: 50%;
     max-width: 600px;
     height: auto ;
     object-fit: cover;
-   
-    border-radius: 5px; /* Bordes redondeados */
-    transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-  }
+    border-radius: 5px;
+    /*Bordesredondeados*/transition: transform 1s cubic-bezier(0.25, 1, 0.5, 1);
+    -webkit-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
+    -moz-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
+    -ms-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
+    -o-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
+}
   #imagesCarousel {
     width: 50%; /* Este valor debe coincidir con el ancho de .custom-img */
     max-width: 500px;
@@ -45,8 +47,12 @@
   
   
   .carousel-item {
-  transition: transform 3s ease-in-out !important;
-  }
+  transition: transform 1s ease-in-out !important;
+  -webkit-transition: transform 1s ease-in-out !important;
+  -moz-transition: transform 1s ease-in-out !important;
+  -ms-transition: transform 1s ease-in-out !important;
+  -o-transition: transform 1s ease-in-out !important;
+}
   
   /* Contenedor de texto */
   .text-content { 
