--- a/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
@@ -28,7 +28,7 @@
 .image-text-wrapper {
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: rgba(0, 0, 0, 0.8); 
+  background: linear-gradient(to right, rgb(0, 21, 255,0.1), rgb(0, 0, 0)); 
   display: flex;
   align-items: center;
   justify-content: space-evenly;
