--- a/src/app/components/nabvar/nosotros/nosotros.component.scss
+++ b/src/app/components/nabvar/nosotros/nosotros.component.scss
@@ -7,7 +7,7 @@
   }
   /* Ajustes para la tarjeta descriptiva */
   .content-wrapper {
-    background-color: rgba(0, 0, 0, 0.8); ;
+    background: linear-gradient(to right, rgb(0, 21, 255,0.1), rgb(0, 0, 0));
     justify-content: space-evenly;
     padding-top: 10px;
     display: flex;
