--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -32,7 +32,7 @@
   }
 
   .container{
-    background-color: rgba(0, 0, 0, 0.8);
+    background: linear-gradient(to right, rgb(0, 21, 255,0.1), rgb(0, 0, 0));
     margin-top: 80px;
     padding-top: 10px;
     width: 100%;
